--- a/frontend/src/app/competition/competition-details/person-modal/person-modal.component.html
+++ b/frontend/src/app/competition/competition-details/person-modal/person-modal.component.html
@@ -40,9 +40,24 @@
         <div class="row">
           <div class="form-group col">
             <label class="font-weight-bold" for="kjonn">Kjønn</label>
-            <select [(ngModel)]="personModel.kjonn" class="form-control" required name="kjonn">
-              <option *ngFor="let kjonn of genders" [ngValue]="kjonn?.id">{{kjonn?.navn}}</option>
-            </select>
+            <div class="type-select" ngbDropdown>
+              <button class="btn type-select__toggle" type="button" ngbDropdownToggle>
+                {{ getSelectedGenderName() }}
+              </button>
+              <div ngbDropdownMenu class="type-select__menu">
+                <button
+                  *ngFor="let kjonn of genders"
+                  ngbDropdownItem
+                  type="button"
+                  (click)="selectGender(kjonn?.id)">
+                  {{kjonn?.navn}}
+                </button>
+              </div>
+
+              <select [(ngModel)]="personModel.kjonn" class="form-control type-select__native" required name="kjonn">
+                <option *ngFor="let kjonn of genders" [ngValue]="kjonn?.id">{{kjonn?.navn}}</option>
+              </select>
+            </div>
           </div>
 
           <div class="form-group col">
